<resources>
    <string name="app_name">Sitimapp Colombia</string>

    <string name="home_view_btn_sitios">Mi Mapp</string>
    <string name="home_view_btn_favoritos">Favoritos</string>
    <string name="home_view_btn_otroslesgusto">A otros usuarios les gusto</string>
    <string name="home_view_btn_salir">Salir</string>
    <string name="home_view_btnagregarlugar">Agregar lugar</string>
    <string name="home_view_btn_acercade">Acerca de</string>
    <string name="btn_login_email">Email</string>
    <string name="btn_login_contrasenia">Contrasenia</string>
    <string name="btn_login_ingresar">Ingresar</string>
    <string name="btn_login_registrarme">Registrarme</string>
    <string-array name="mislugares">
        <item>Restaurantes</item>
        <item>Comida</item>
        <item>Hospedaje</item>
        <item>Cultura</item>
        <item>Diversión</item>
        <item>Compras</item>
    </string-array>
    <string name="txt_listaFavoritos_encabezado">Mis favoritos</string>
    <string name="menu_vermapa">Ver mapa</string>
    <string name="menu_verdetalles">Ver detalles</string>
    <string name="usuariosinsertar_titulo">Insertar Usuario</string>
    <string name="usuariosinsertar_txtNombres">Digite los nombres del usuario</string>
    <string name="usuariosinsertar_txtEmail">Digite el email del usuario</string>
    <string name="usuariosinsertar_txtClave">Digite la clave del usuario</string>
    <string name="usuariosinsertar_btnRegistrarse">Registrarse</string>
    <string name="usuariosinsertar_btnCancelar">Cancelar</string>
    <string name="usuariosinsertar_msjexito_titulo">Registro guardado</string>
    <string name="usuariosinsertar_msjexito_cuerpo">Se ha agregado el registro correspondiente</string>
    <string name="menumap_mnicultura">Cultura</string>
    <string name="menumap_mnirestaurante">Restaurante</string>
    <string name="menumap_mnidiversion">Diversión</string>
    <string name="menumap_mniaotroslesgusto">A otros les gusto</string>
    <string name="menumap_mnihospedaje">Hospedaje</string>
    <string name="menumap_mnicompra">Compra</string>
    <string name="usuarioseditar_titulo">Editar Usuario</string>
    <string name="mislugares_txt_nombre">Digita el nombre del sitio</string>
    <string name="mislugares_txt_descripcion">Escribe una descripcion</string>
    <string name="mislugares_txt_longitud">Digite longitud</string>
    <string name="mislugares_txt_latitud">Digite latitud</string>
    <string name="mislugares_sp_seleccion"></string>
    <string name="mislugares_rb_calificacion"></string>
    <string name="mislugares_btn_guardar">Guardar</string>
    <string name="mislugares_editar_txt_nombre">Digita el nombre del sitio</string>
    <string name="mislugares_editar_txt_descripcion">Escribe una descripcion</string>
    <string name="mislugares_editar_txt_longitud">Digite longitud</string>
    <string name="mislugares_editar_txt_latitud">Digite latitud</string>
    <string name="mislugares_editar_sp_seleccion"></string>
    <string name="mislugares_editar_rb_calificacion"></string>
    <string name="mislugares_editar_btn_guardar">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="llave_cliente_web">971956836199-5o7dk9n71f00mqe3vnj207m1s59ncakk.apps.googleusercontent.com</string>

</resources>